fix: remediate audit flaws, resolve deprecations, and modernize build