@@ -25,14 +25,14 @@ public class NotificationDescriptorParserTest {
         assertEquals(message1.getWhisperNickname(),"Pubesmannen");
         assertEquals(message1.getItemName(),"Bronn's Lithe Cutthroat's Garb");
         assertEquals(message1.getCurrency(),"alteration");
-        assertEquals(message1.getCurCount(),new Double(1));
+        assertEquals(message1.getCurCount(),Double.valueOf(1));
         assertEquals(message1.getOffer(),"");
 
         ItemTradeNotificationDescriptor message2 = (ItemTradeNotificationDescriptor) parser.parse("@From <TEST> Pubesmannen: Hi, I would like to buy your Bronn's Lithe Cutthroat's Garb listed for 15 exalt in Legacy (stash tab \"Maps\"; position: left 5, top 6) offer 32");
         assertEquals(message2.getWhisperNickname(),"Pubesmannen");
         assertEquals(message2.getItemName(),"Bronn's Lithe Cutthroat's Garb");
         assertEquals(message2.getCurrency(),"exalt");
-        assertEquals(message2.getCurCount(),new Double(15));
+        assertEquals(message2.getCurCount(),Double.valueOf(15));
 
         assertEquals(message2.getOffer()," offer 32");
     }
@@ -41,7 +41,7 @@ public class NotificationDescriptorParserTest {
         ItemTradeNotificationDescriptor message1 = (ItemTradeNotificationDescriptor) parser.parse("@From Pubesmannen: Hi, I would like to buy your level 1 4% Reduced Mana Support in Hardcore Legacy (stash tab \"qgems\"; position: left 12, top 4)");
         assertEquals(message1.getWhisperNickname(),"Pubesmannen");
         assertEquals(message1.getItemName(),"level 1 4% Reduced Mana Support");
-        assertEquals(message1.getCurCount(),new Double(0d));
+        assertEquals(message1.getCurCount(),Double.valueOf(0d));
         assertEquals(message1.getCurrency(),"???");
         assertEquals(message1.getOffer(),"");
         assertEquals(message1.getLeague(),"Hardcore Legacy");
@@ -49,7 +49,7 @@ public class NotificationDescriptorParserTest {
         ItemTradeNotificationDescriptor message2 = (ItemTradeNotificationDescriptor) parser.parse("@From Pubesmannen: Hi, I would like to buy your level 1 4% Reduced Mana Support in Hardcore (stash tab \"qgems\"; position: left 12, top 4)");
         assertEquals(message2.getWhisperNickname(),"Pubesmannen");
         assertEquals(message2.getItemName(),"level 1 4% Reduced Mana Support");
-        assertEquals(message2.getCurCount(),new Double(0d));
+        assertEquals(message2.getCurCount(),Double.valueOf(0d));
         assertEquals(message2.getCurrency(),"???");
         assertEquals(message2.getOffer(),"");
         assertEquals(message2.getLeague(),"Hardcore");
@@ -59,18 +59,18 @@ public class NotificationDescriptorParserTest {
     public void testPoeCurrency()  throws Exception{
         CurrencyTradeNotificationDescriptor message1 = (CurrencyTradeNotificationDescriptor) parser.parse("@From tradeeer: Hi, I'd like to buy your 366 chaos for my 5 exalted in Legacy.");
         assertEquals(message1.getWhisperNickname(),"tradeeer");
-        assertEquals(message1.getCurrForSaleCount(),new Double(366));
+        assertEquals(message1.getCurrForSaleCount(),Double.valueOf(366));
         assertEquals(message1.getCurrForSaleTitle(),"chaos");
         assertEquals(message1.getCurrency(),"exalted");
-        assertEquals(message1.getCurCount(),new Double(5));
+        assertEquals(message1.getCurCount(),Double.valueOf(5));
         assertEquals(message1.getOffer(),"");
 
         CurrencyTradeNotificationDescriptor message2 = (CurrencyTradeNotificationDescriptor) parser.parse("@From <qwe> tradeeer: Hi, I'd like to buy your 366 chaos for my 5 exalted in Legacy. 123");
         assertEquals(message2.getWhisperNickname(),"tradeeer");
-        assertEquals(message2.getCurrForSaleCount(),new Double(366));
+        assertEquals(message2.getCurrForSaleCount(),Double.valueOf(366));
         assertEquals(message2.getCurrForSaleTitle(),"chaos");
         assertEquals(message2.getCurrency(),"exalted");
-        assertEquals(message2.getCurCount(),new Double(5));
+        assertEquals(message2.getCurCount(),Double.valueOf(5));
         assertEquals(message2.getOffer(),"123");
     }
 
